manifests/transmission/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
  annotations: {}
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
      sectionName: https-home-lex-la
  hostnames:
    - transmission.home.lex.la
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: transmission
          port: 80
