manifests/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
spec:
  rules:
    - host: transmission.k8s.home.lex.la
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  name: http
  tls:
    - hosts:
        - transmission.home.lex.la
      secretName: transmission-tls
